# MoonWalk

./: .gitignore  .gitmodules  BENCHMARK.md  CONTRIBUTING.md  Cargo.toml  README.md  STYLE_GUIDE.md  TODO.md
backend/: Cargo.toml  README.md
backend/src/: error.rs  lib.rs
backend/src/core/: buffer.rs  context.rs  encoder.rs  mod.rs
backend/src/pipeline/: bind.rs  builder.rs  fallback.rs  mod.rs  types.rs  vertex.rs
backend/src/render/: mod.rs  pass.rs  texture.rs
benchmark/: Cargo.toml
benchmark/src/: main.rs
bootstrap/: Cargo.toml
bootstrap/src/: app.rs  lib.rs  runner.rs  window.rs
example/: Cargo.toml
example-custom-paint/: Cargo.toml
example-video/: Cargo.toml
example-video/src/: main.rs
example/src/: main.rs
example3d/: Cargo.toml
example3d/src/: main.rs
examples/example/: Cargo.toml
examples/example-custom-paint/: Cargo.toml
examples/example-custom-paint/src/: main.rs
examples/example-lua/: Cargo.toml  test.lua
examples/example-lua/src/: main.rs
examples/example-video/: Cargo.toml
examples/example-video/src/: main.rs
examples/example/src/: main.rs
examples/example3d/: Cargo.toml
examples/example3d/src/: main.rs
lua/: Cargo.toml
lua/src/: lib.rs
lua/src/bindings/: brush.rs  container.rs  filters.rs  lunar.rs  mod.rs  objects.rs  path.rs  resources.rs
lunar3d/: Cargo.toml
lunar3d/src/: factory.rs  lib.rs  resources.rs
lunar3d/src/core/: config.rs  mod.rs  types.rs
lunar3d/src/internal/: mod.rs  store.rs
lunar3d/src/scene/: mod.rs  renderer.rs  shadows.rs  uniforms.rs
lunar3d/src/shaders/: pbr.wgsl  phong.wgsl  shadow.wgsl
lunar3d/src/tools/: joint.rs  knife.rs  mod.rs  shatter.rs  subdivide.rs  transform.rs
moonwalk/: Cargo.toml
moonwalk/src/: debug.rs  error.rs  lib.rs  resource_manager.rs
moonwalk/src/abstract/: mod.rs  pipeline.rs
moonwalk/src/batching/: common.rs  group.rs  mod.rs
moonwalk/src/batching/shapes/: mod.rs  uber.rs
moonwalk/src/easy_gpu/: context.rs  pass.rs
moonwalk/src/fallback/: README.md  batch.rs  check.rs  mod.rs  pipeline.rs
moonwalk/src/filters/: color_matrix.rs  factory.rs  mod.rs  pipeline.rs  uniforms.rs
moonwalk/src/filters/shaders/: advanced.wgsl  blur.wgsl  color_matrix.wgsl
moonwalk/src/gpu/: buffer.rs  context.rs  framebuffer.rs  matrix.rs  mod.rs  pass.rs  pipeline.rs  texture.rs
moonwalk/src/objects/: mod.rs  store.rs
moonwalk/src/painting/: brush.wgsl  mod.rs
moonwalk/src/path/: README.md  mod.rs  path.wgsl  svg.rs
moonwalk/src/public/: brush.rs  custom.rs  export.rs  filters.rs  getter.rs  mod.rs  objects.rs  resources.rs  video.rs
moonwalk/src/rendering/: container.rs  custom.rs  mod.rs  pipeline.rs  renderer.rs  snapshot.rs  state.rs  texture.rs  vertex.rs  video.rs
moonwalk/src/scene/: batch.rs  loader.rs  mod.rs  pipeline.rs  render.rs  types.rs
moonwalk/src/scene/shaders/: pbr.wgsl  phong.wgsl  shadow.wgsl
moonwalk/src/shaders/: empty.wgsl  shape.wgsl
moonwalk/src/textware/: cache.rs  font.rs  mod.rs
moonwalk/tests/: batch_logic_test.rs  math_test.rs  shader_test.rs  store_safety_test.rs  store_test.rs  texture_test.rs  vector_test.rs
platform/web/src/: index.html
scripts/: README.md  build_android.sh  set_old_ffmpeg.sh  test.sh
src/: error.rs  ffi_utils.rs  font.rs  lib.rs  renderer.rs
src/objects/: mod.rs  store.rs  types.rs
src/rendering/: batch.rs  glyph_cache.rs  mod.rs  rect.wgsl  renderer.rs  shader.rs
src/rendering/batch/: bezier.rs  mod.rs  (+3 more)
widget/: Cargo.toml  README.md
widget/src/: layout.rs  lib.rs  tree.rs
(+1 files in other folders)
