[workspace]
resolver = "2"
members = [
    "benchmark",
    "bootstrap",
    "example",
    "example-video",
    "example3d",
    "moonwalk",
    "widget",
]

[profile.release]
lto = true
# target-cpu = "native"
debug = false
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
moonwalk = { path = "./moonwalk" }
