[workspace]
resolver = "2"
members = [
    "benchmark",
    "bootstrap",
    "example",
    "example-video",
    "example3d",
    "example-custom-paint",
    "moonwalk",
    "widget",
    "lunar3d",
]

[profile.release]
lto = true
# target-cpu = "native"
debug = false
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
moonwalk = { path = "./moonwalk" }
lunar3d = { path = "./lunar3d" }
