[workspace]
resolver = "2"
members = [
    "benchmark",
    "bootstrap",
    "examples/example",
    "examples/example-video",
    "examples/example3d",
    "examples/example-custom-paint",
    "examples/example-lua",
    "moonwalk",
    "widget",
    "lunar3d",
    "lua",
    "backend",
]

[profile.release]
lto = true
# target-cpu = "native"
debug = false
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
moonwalk = { path = "./moonwalk" }
lunar3d = { path = "./lunar3d" }
moonwalk_bootstrap = { path = "./bootstrap" }
moonwalk_lua = { path = "./lua" }
moonwalk_backend = { path = "./backend" }