[package]
name = "moonwalk"
version = "0.29.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
video = ["dep:video-rs", "dep:ndarray"]
async = ["dep:tokio"]

[dependencies]
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
log = "0.4"
glam = { version = "0.24", features = ["scalar-math", "bytemuck"] }
rustc-hash = "1.1"
thiserror = "1.0"
libc = "0.2"
raw-window-handle = "0.6"
wgpu = "24.0"
cosmic-text = "0.11"
swash = "0.1"
rayon = "1.11"
image = "0.25.9"
lyon = { version = "1.0", features = ["extra"] }
parking_lot = "0.12"
lazy_static = "1.4"
tokio = { version = "1", features = ["fs", "io-util"], optional = true }

[dependencies.video-rs]
version = "0.10"
optional = true
features = ["ndarray"]

[dependencies.ndarray]
version = "0.16"
optional = true

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.8"
android_logger = "0.13"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
